# apps/backend/src/picks/dto/create-pick.dto.ts
@@ -1,30 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-import {
-  ArrayMinSize,
-  IsArray,
-  IsOptional,
-  IsString,
-  MaxLength,
-  MinLength,
-} from 'class-validator';
-
-export class CreatePickDto {
-  @ApiProperty({ example: 'Lunch', minLength: 1, maxLength: 100 })
-  @IsString()
-  @MinLength(1)
-  @MaxLength(100)
-  title: string;
-
-  @ApiProperty({ required: false, maxLength: 500 })
-  @IsOptional()
-  @IsString()
-  @MaxLength(500)
-  description?: string;
-
-  @ApiProperty({ example: ['Pizza', 'Salad'], minItems: 2 })
-  @IsArray()
-  @ArrayMinSize(2)
-  @IsString({ each: true })
-  @MinLength(1, { each: true })
-  options: string[];
-}
