# apps/backend/src/picks/dto/vote.dto.ts
@@ -1,9 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { IsString, IsUUID } from 'class-validator';
-
-export class VoteDto {
-  @ApiProperty({ format: 'uuid' })
-  @IsString()
-  @IsUUID()
-  optionId: string;
-}
